# tora

./: .gitignore  README.md  install.sh  pyproject.toml  sample.py  train.py
config/: pretrain.yaml  sample.yaml  train.yaml
config/data/: joint.yaml
config/data/main/: bbad_everyday.yaml  partnet.yaml  twobytwo.yaml
config/data/rpf/: rpf_base.yaml  rpf_encoder.yaml
config/data/zeroshot/: bbad_artifact.yaml  fantastic_breaks.yaml  fractura.yaml
config/loggers/: wandb.yaml
config/model/: tora.yaml
config/model/alignment_loss/: cka.yaml  cosine.yaml  nt_xent.yaml
config/model/feature_extractor/: ptv3_object.yaml
config/model/flow_model/: dit.yaml
config/model/projector/: mlp.yaml
config/model/teacher/: concerto.yaml  find3d.yaml  openshape.yaml  patchalign3d.yaml  sonata.yaml  uni3d.yaml
config/trainer/: infer.yaml  main.yaml  pretrain.yaml
dataset_process/: convert_artifact_to_h5_igl.py  convert_fantastic_breaks_to_h5.py  setup_fractura.sh
tora/: procrustes.py  sampler.py  visualizer.py
tora/data/: __init__.py  datamodule.py  dataset.py  transform.py
tora/eval/: __init__.py  evaluator.py  metrics.py
tora/modeling/: __init__.py  tora.py
tora/modeling/encoder/: __init__.py  point_cloud_encoder.py
tora/modeling/encoder/pointtransformerv3/: __init__.py  model.py
tora/modeling/encoder/pointtransformerv3/serialization/: __init__.py
tora/modeling/flow_model/: __init__.py  dit.py  embedding.py  layer.py  norm.py  utils.py
tora/modeling/loss/: __init__.py  base.py  cka.py  cosine.py  nt_xent.py
tora/modeling/projector/: __init__.py  base.py  mlp.py
tora/teacher/: __init__.py  base.py  cache.py  concerto.py  find3d.py  openshape.py  patchalign3d.py  uni3d.py
tora/teacher/_loaders/: __init__.py  find3d_loader.py  openshape_loader.py  patchalign3d_loader.py  uni3d_loader.py
tora/utils/: __init__.py  callbacks.py  checkpoint.py  logging.py  point_clouds.py  render.py  training.py
